force-app/main/default/objects/Transaction__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>