force-app/main/default/objects/Transaction__c/fields/Transaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Notes__c</fullName>
    <label>Transaction Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>