force-app/main/default/objects/Transaction__c/fields/Transaction_Owner__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transaction Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>