force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transaction Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transaction_Type__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transaction_Type__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>